--- a/submission/dashboard/requirements.txt
+++ b/submission/dashboard/requirements.txt
@@ -1,5 +1,5 @@
-import streamlit as st
-import pandas as pd
-import numpy as np
-import matplotlib.pyplot as plt
-import seaborn as sns
+streamlit==1.41.0
+pandas==1.5.1
+matplotlib==3.6.2
+numpy==1.23.5
+seaborn==0.10.1
